# CMakeIssue17497

./: CMakeLists.txt  README.md  bar.h  foo.h  main.cpp
